# Pybattle

./: .gitignore  .pypirc  CONTRIBUTING.md  README.md  _setup.py  asy.py  b.py  binary.txt  bot.py  bss_cal.py  create.py  creatures..txt  d.py  element.py  ex.py  fizzbuzz.py  fold.py  import_order.py  index.html  lex.py  lexer.py  main.py  matrix.py  metadata.toml  movement.py  pigg.py  pyproject.toml  pyscript.toml  ra.py  ran.py  setup.py  suspect.py  t.py  test.md  test.py  time_debugger.py  txt.txt  update.py  update_text.py  update_toml.py  (+4 more)
.github/workflows/: running.yml
auto/: delete_cache.py
auto_replace/: replace.py  replaces.json
chars/: __init__.py  chars.json  charset1.py  charset2.py  webscrapepy
cleanup/: delete_cache.py
creatures/: humanoid.py  pymon.py
creatures/attributes/: ability.py  element.py  item.py  move.py  reinforcements.py  trait.py
git/: ansi.py  log.py  main.py
git/creatures/: pymon.py
logs/: logging.toml
pybattle/: __init__.py  error.py  errors.py  log.py  traceback.py  types_.py
pybattle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybattle/ansi/: __init__.py  ansi.py  color.py  colors.py  cursor.py  input.py  scene.py  screen.py
pybattle/battle/: battle.py
pybattle/creatures/: binary.py  graph.py  humanoid.py  pymon.py  rand.py  (+1 more)
source/: log.py  types_.py
src/: __init__.py  ansi.py  error.py  fix_try.py  help.py  log.py  traceback.py  types_.py
structure/: diagram.py
tests/: bedroom.py  logo.py  menu.py  speed.py  test.py  textbox.py  time_.py
web/: create.py  movement.py  pyscript.toml  update.py
(+154 files in other folders)
