[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pybattle"
dynamic = ["version"]
authors = [{ name = "Jacob Ophoven" }]
description = "A python ascii text art pokemon style game in the terminal."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
]
dependencies = [""]

[project.urls]
"Homepage" = "https://github.com/PythonDominator/Pybattle"


[project.optional-dependencies]
chars-dataset = ['bs4', 'rich']
developer = []


[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
    "",
] # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }
